--- a/src/sass/config/_z-index.scss
+++ b/src/sass/config/_z-index.scss
@@ -20,7 +20,7 @@
 ///     'message', // 4
 ///     'modal', // 5
 ///   );
-$z-index: ('global-header');
+$z-index: ('global-header', 'logs');
 
 // Z-Index [function]
 // ------------------
